examples/test/testpolicy4979.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4979
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key1: value43
      key43: value20
      key39: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value1
          key22: value26
      podSelector:
        matchLabels:
          key38: value24
          key37: value25
          key27: value42
